[package]
name = "hazina-escrow"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils", "alloc"] }
proptest     = { version = "1", default-features = false, features = ["std"] }
dotenvy      = "0.15"
serde_json   = "1.0"
ethnum = "1.5.3"


[features]
fuzz-tests = []
integration-tests = []

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
 